--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -2770,8 +2770,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #212529;
-  background-color: #ff7a57;
-  border-color: #ff7a57;
+  background-color: #79A9F5;
+  border-color: #79A9F5;
 }
 
 .btn-primary:hover {
