--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -7139,7 +7139,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #ff7a57 !important;
+  background-color: #79A9F5 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
