--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -11518,12 +11518,14 @@ pre {
 }
 
 .header .container .img-holder img {
-  width: 100%;
+  width: 80%;
   max-width: 620px;
   -webkit-filter: drop-shadow(0 -4px 20px rgba(206, 212, 218, 0.4));
           filter: drop-shadow(0 -4px 20px rgba(206, 212, 218, 0.4));
   margin-left: auto;
   margin-right: -2rem;
+  object-position: 0 1rem;
+  
 }
 
 @media (max-width: 991.98px) {
